--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hi">
             <img src="img/cute_logo.jpg" alt="cute_logo" class="hi-img">
             <h2 class="hi-h2 h2">Hi</h2>
-            <p class="hi-p p">I'm a web developer based in India. I have a passion for websites and love to create for web and mobile devices.</p>
+            <p class="hi-p p">I'm a web developer based in India. I have a passion for websites and love to create some awesome responsive websites.</p>
             <h1 class="hi-h1 h1">.....</h1>
         </div>
         <div class="what-can-i-do">
@@ -37,7 +37,7 @@
             <div class="develop">
                 <div class="left-develop">
                     <h2 class="develop-h2 h2">Develop what you want</h2>
-                    <p class="develop-p p">I'm a developer, so I know how to create your website to ren across devices using latest technologies available.</p>
+                    <p class="develop-p p">I'm a developer, so I know how to create your website to run across devices using latest technologies available.</p>
                 </div>
                 <div class="right-develop">
                     <img src="img/cute_logo.jpg" alt="cute_logo" class="develop-img">
@@ -48,13 +48,13 @@
             <h1 class="h1-i h1">I can help</h1>
             <h2 class="h2-i h2">I'm currently available for freelance work.</h2>
             <p class="p-i p">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
-            <a href="#" class="a-i">✉ Message Me</a>
+            <a href="https://twitter.com/MsCoder1" class="a-i">✉ Message Me</a>
         </div>
         <div class="footer">
             <div class="footer-one">
-                <a href="#" class="footer-one-item">github</a>
-                <a href="#" class="footer-one-item">twitter</a>
-                <a href="#" class="footer-one-item">linkedIn</a>
+                <a href="https://github.com/lubnafathima" class="footer-one-item">github</a>
+                <a href="https://twitter.com/MsCoder1" class="footer-one-item">twitter</a>
+                <a href="https://www.linkedin.com/in/lubna-fathima-4a30b4226/" class="footer-one-item">linkedIn</a>
             </div>
             <p class="footer-p">© 2022 Lubna Fathima @ Web Developer</p>
         </div>
